--- a/main.html
+++ b/main.html
@@ -8,7 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+   <div class="holder">
+  <div class="item">Item 1</div>
+  <div class="item">Item 2</div>
+  <div class="item">Item 3</div>
+   <div class="item">Item 4</div>
+     <div class="item">Item 6</div>
+	    <div class="item">Item 7</div>
+	  
+  <!-- Add more items here if needed -->
+</div>
+
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
